# hr-assistant-project

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGE_LOG.md  ESERCIZI.md  README.md  SPEC_SETUP.md  chainlit-config.txt  et --soft HEAD~2  pyproject.toml  tessl.json  theme.md
.github/workflows/: spec-verification.yml
.tessl/plugins/vibe-ai/spec-as-source/: tessl-package.json  tile.json
.tessl/plugins/vibe-ai/spec-as-source/.tessl-plugin/: plugin.json
.tessl/plugins/vibe-ai/spec-as-source/skills/spec-as-source-setup/: SKILL.md
.tessl/plugins/vibe-ai/spec-as-source/skills/spec-ci-sync/: SKILL.md
.tessl/plugins/vibe-ai/spec-as-source/skills/spec-rebuild/: SKILL.md
data/chromadb/: chroma.sqlite3
data/chromadb/0cb35472-6774-4585-99cc-27ba2b601031/: index_metadata.pickle
hr_assistant/: __init__.py  config.py  database.py  document_processor.py  semantic_chunking.py  utils.py
public/: app.css  theme.json  theme2.json  theme3.json
resumes/: CV Temperato Marco.docx  aggiunto.txt  candidati_fittizi.csv  codingai.md  curriculum-controllo-di-gestione.txt  curriculum-cybersecurity.txt  curriculum-marketing.txt  curriculum-software-engineer.txt  cv-modder.txt  giornalista_tech.docx  idraulico.txt  infermiere.txt  nuovaggiunta.txt  nuovi_candidati_fittizi.xlsx  saldatore.txt  test.py
scripts/: check-spec-links.sh  check-target-ownership.sh  verify.sh
specs/: candidate-contacts.spec.md  cv-retrieval.spec.md  document-sync.spec.md
tests/: conftest.py  test_candidate_contacts.py  test_config.py  test_cv_retrieval.py  test_document_sync.py
(+2 files in other folders)
