[project]
name = "hr-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Giancarlo Valente",email = "giancarlo@aulab.it"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "chromadb (>=0.6.3,<0.7.0)",
    "openai (>=1.59.9,<2.0.0)",
    "ollama (>=0.4.6,<0.5.0)",
    "chainlit (>=2.0.5,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "markitdown[docx,pdf,pptx,xlsx] (>=0.1.6,<0.2.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "urllib3 (>=2.2.0,<2.4.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
